@@ -1,4 +1,0 @@
-config BR2_PACKAGE_XPROTO_EVIEEXT
-	bool "evieext"
-	help
-	  X.Org EvIE protocol headers
