@@ -23,8 +23,9 @@
 	xlib_libpciaccess, xproto_dri2proto, xproto_eviext,
 	xproto_fontcacheproto, xproto_xf86miscproto, xserver_xorg-server
 
-	Removed packages: xapp_xtrap, xlib_libXTrap, xlib_libXxf86misc,
-	xproto_trapproto, xproto_xf86miscproto
+	Removed packages: xapp_xtrap, xlib_libXTrap, xlib_libXevie,
+	xlib_libXxf86misc, xxproto_evieext, proto_trapproto,
+	xproto_xf86miscproto
 
 	Issues resolved (http://bugs.uclibc.org):
 
